# ulwazi

./: .coverage  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  MANIFEST.in  Makefile  README.md  agents.md  common.mk  compile-scss.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  tox.ini  workshop.yaml
.github/workflows/: policy.yaml  qa.yaml  release-publish.yaml  test.yaml
.test_output/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
.test_output/.doctrees/: environment.pickle  index.doctree
.test_output/.doctrees/content/: contribute.doctree  myst-cheat-sheet.doctree  roadmap.doctree  rst-cheat-sheet.doctree  test-code-headings.doctree  test.doctree  test2.doctree  test3.doctree  test4.doctree  test5.doctree  test6_admonitions.doctree  test7_admonitionsMD.doctree  test_sphinx_tabs.doctree  test_sphinx_tabs_myst.doctree  use.doctree
.test_output/_sources/content/: test.rst.txt  test2.rst.txt  test7_admonitionsMD.md.txt
.test_output/_static/css/: skeleton.css  tasklist.css
.test_output/_static/js/: dropdown.js  product_menu.js
.test_output/content/: contribute.html  myst-cheat-sheet.html  roadmap.html  rst-cheat-sheet.html  test-code-headings.html  test.html  test2.html  test3.html  test4.html  test5.html  test6_admonitions.html  test7_admonitionsMD.html  test_sphinx_tabs.html  test_sphinx_tabs_myst.html  use.html
docs/: .gitignore  .readthedocs.yaml  Makefile  conf.py  default-conf.py  index.md  index.rst  product_menu.py  requirements.txt  test.rst  test2.rst  test4.rst  test5.rst  test6_admonitions.rst
docs/.sphinx/: get_vale_conf.py  vale.ini
docs/.sphinx/.doctrees/: environment.pickle  index.doctree
docs/.sphinx/.doctrees/content/: contribute.doctree  myst-cheat-sheet.doctree  roadmap.doctree  rst-cheat-sheet.doctree  test-code-headings.doctree  test-on-page-toc.doctree  test.doctree  test2.doctree  test3.doctree  test4.doctree  test5.doctree  test6_admonitions.doctree  test7_admonitionsMD.doctree  test_sphinx_tabs.doctree  typography-verification.doctree
docs/.sphinx/styles/Canonical/: 000-US-spellcheck.yml  003-Ubuntu-names-versions.yml  004-Canonical-product-names.yml  005-Industry-product-names.yml  008-Headings-no-period.yml  009-Headings-no-links.yml  010-Punctuation-double-spaces.yml  012-Date-format.yml  019-no-external-images.yml  019-no-google-drive-images.yml  025a-latinisms-with-english-equivalents.yml  025c-latinisms-to-avoid.yml  026-hints-tips.yml  027-non-descriptive-link-text.yml  500-Repeated-words.yml
docs/.sphinx/styles/config/vocabularies/Canonical/: reject.txt
docs/_dev/: get_vale_conf.py  vale.ini
docs/_dev/.doctrees/: environment.pickle  index.doctree
docs/_dev/.doctrees/content/: contribute.doctree  rst-cheat-sheet.doctree  test-on-page-toc.doctree  test.doctree  test2.doctree  test4.doctree  test6_admonitions.doctree  test_sphinx_tabs.doctree  test_sphinx_tabs_myst.doctree  typography-verification.doctree  use.doctree
docs/_static/: product_menu_copy.html
docs/content/: code-title.md  contribute.md  contribute.rst  design-elements-inventory.md  myst-cheat-sheet.md  myst.md  roadmap.md  rst-cheat-sheet.rst  test-on-page-toc.rst  test.rst  test3.rst  test4.rst  test6_admonitions.rst  test7_admonitionsMD.md  test_lists.rst  test_lists_md.md  test_sphinx_design_tabs_myst.md  test_sphinx_tabs_myst.md  testing-strategy.md  typography-verification.rst  use.md  use.rst
docs/docs/_static/: product_menu_copy.html
docs/reuse/: links.txt
results/: coverage.xml
tests/: scss_propagation.py  test_hint_admonition.py  test_pdf_generation.py  test_scss_propagation.py  test_site_validation.py
tests/integration/: __init__.py  test_ulwazi_integration.py
tests/integration/example/: conf.py  index.md
tests/integration/example/content/: contribute.rst  myst-cheat-sheet.md  roadmap.md  rst-cheat-sheet.rst  test-code-headings.md  test7_admonitionsMD.md  test_sphinx_tabs.rst  test_sphinx_tabs_myst.md
ulwazi/: __init__.py  _version.py  navigation.py  product_menu_gen.py  products-menu.py  tabs.py
ulwazi/theme/ulwazi/: about.html  globaltoc.html  layout.html  localtoc.html  page.html  relations.html  search.html  searchbox.html  sourcelink.html  theme.conf  theme.toml
ulwazi/theme/ulwazi/assets/: _ulwazi.scss  _vanilla-settings.scss  main.scss
ulwazi/theme/ulwazi/components/: analytics.html  icons.html  product_menu_copy.html
ulwazi/theme/ulwazi/sections/: announcement.html  article.html  feedback.html  footer-article.html  footer.html  footer_old.html  header-article.html  header-content.html  header-secondary.html  header.html  header_old.html  navigation_dropdowns.html  sidebar-primary.html  sidebar-secondary.html
ulwazi/theme/ulwazi/static/css/: debug.css  default.css  feedback.css  local-toc.css  main.scss  search.css  sidenav.css  skeleton.css  tasklist.css  vanilla-framework-version-4.18.5.min.css  vanilla-main.css  vanilla-main.css.map
ulwazi/theme/ulwazi/static/js/: dropdown.js  elements.js  main.js  nav-toggle.js  product_menu.js  scripts.js  search-breadcrumbs.js  search.js  theme-toggle.js  throttle.js  top-menu.js  vanilla-tabs.js
