[project]
name = "ulwazi"
version = "0.2"
description = 'Ulwazi theme for Sphinx documentation projects'
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Canonical Ltd.", email = "webteam@canonical.com"}
]
keywords = ["sphinx", "theme", "documentation", "vanilla", "canonical"]

dependencies = [
    "sphinx",
    "sphinx-basic-ng",
    "sphinxcontrib-jquery",
    "beautifulsoup4",
]

[project.optional-dependencies]
dev = [
    "requests",  # For product_menu_gen.py utility
]

[project.urls]
Homepage = "https://canonical-ulwazi.readthedocs-hosted.com/"
Documentation = "https://canonical-ulwazi.readthedocs-hosted.com/"
Repository = "https://github.com/canonical/ulwazi"
Issues = "https://github.com/canonical/ulwazi/issues"

classifiers = [
    'Framework :: Sphinx',
    'Framework :: Sphinx :: Theme',
    'Development Status :: 4 - Beta',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Environment :: Console',
    'Environment :: Web Environment',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Topic :: Documentation',
    'Topic :: Software Development :: Documentation',
]

[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["node_modules*"]

[tool.sphinx-theme-builder]
node-version = "18.16.0"

[project.entry-points."sphinx.html_themes"]
ulwazi = "ulwazi"
